2002-03-19  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/add_window.c (hide_screen):
	(setup_title_window):
	(setup_resize_handle_windows):
	(setup_button_windows):
	fixed visual and depth of decoration windows

2002-03-18  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/frame.c (frame_setup_title_bar):
	fixed title layout bug

	* fvwm/move_resize.c (MaximizeHeight):
	fixed bug in "grow" option of the Maximize command

	* fvwm/geometry.h:
	fixed broken prototype for get_title_font_size_and_offset

	* fvwm/geometry.c (get_title_font_size_and_offset):
	simplified code a bit

2002-03-18  olicha  <olivier.chapuis@free.fr>

	* fvwm/geometry.h:
	* fvwm/geometry.c (get_title_font_size_and_offset):
	* fvwm/add_window.c (setup_title_geometry):
	* fvwm/style.h:
	* fvwm/style.c (parse_and_set_window_style):
	(check_window_style_change):
	* fvwm/update.c (apply_window_updates):
	* fvwm/window_flags.h:
	* fvwm/fvwm.h:
	Reworte side title direction styles and use LeftTitleRotatedClockWise /
	LeftTitleRotatedCounterClockWise, RightTitleRotatedClockWise /
	RightTitleRotatedCounterClockWise

2002-03-18  Dominik Vogt  <dominik.vogt@gmx.de>

	* acconfig.h:
	* vms/config.h (FMiniIconsSupported):
	removed last traces of MINI_ICONS ifdef

	* fvwm/windowlist.c (CMD_WindowList):
	* fvwm/update.c (apply_window_updates):
	* fvwm/style.h:
	* fvwm/style.c (merge_styles):
	(parse_and_set_window_style):
	(check_window_style_change):
	* fvwm/screen.h:
	* fvwm/module_interface.c (SendMiniIcon):
	(BroadcastMiniIcon):
	(CMD_Send_WindowList):
	* fvwm/fvwm.h (FvwmWindow):
	* fvwm/ewmh_icons.c (ewmh_WMIcon):
	(EWMH_DoUpdateWmIcon):
	(ewmh_SetWmIconFromPixmap):
	(EWMH_DeleteWmIcon):
	(EWMH_SetIconFromWMIcon):
	* fvwm/builtins.c (ReadDecorFace):
	* fvwm/borders.c (DrawButton):
	(CMD_BorderStyle):
	(CMD_BorderStyle):
	* fvwm/add_window.c (setup_window_structure):
	(setup_mini_icon):
	(destroy_mini_icon):
	(change_mini_icon):
	(AddWindow):
	* acconfig.h (FMiniIconsSupported):