@@ -1,5 +1,8 @@
 2002-03-19  Dominik Vogt  <dominik.vogt@gmx.de>
 
+	* fvwm/frame.c (frame_setup_title_bar):
+	removed yesterday's 'fix'
+
 	* fvwm/add_window.c (hide_screen):
 	(setup_title_window):
 	(setup_resize_handle_windows):
